<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/itemGameRecordHomeTeamName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/itemGameRecordHomeTeamScore"
        tools:text="Teste"/>

    <TextView
        android:id="@+id/itemGameRecordHomeTeamScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/itemGameRecordDivisor"
        tools:text="03" />

    <TextView
        android:id="@+id/itemGameRecordDivisor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="x"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/itemGameRecordAwayTeamScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/itemGameRecordDivisor"
        tools:text="02" />

    <TextView
        android:id="@+id/itemGameRecordAwayTeamName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/itemGameRecordAwayTeamScore"
        app:layout_constraintEnd_toStartOf="@id/itemGameRecordDelete"
        tools:text="Teste"/>

    <ImageView
        android:id="@+id/itemGameRecordDelete"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:padding="10dp"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/itemGameRecordAwayTeamName"
        />


</androidx.constraintlayout.widget.ConstraintLayout>