...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackGround">

        <!-- Home team -->
        <TextView
            android:id="@+id/gameScoreHomeTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:textColor="@color/colorHomeText"
            android:text="@={viewModel.homeTeamName}"
            app:layout_constraintBottom_toTopOf="@id/gameScoreHomeIncreaseTwo"
...
            app:layout_constraintEnd_toEndOf="@id/gameScoreHomeTeamScore"
            app:layout_constraintStart_toStartOf="@id/gameScoreHomeTeamScore"
            app:layout_constraintTop_toBottomOf="@id/gameScoreHomeTeamScore" />

        <!-- Away team -->
        <TextView
            android:id="@+id/gameScoreAwayTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@={viewModel.awayTeamName}"
            android:textColor="@color/colorAwayText"
            app:layout_constraintBottom_toTopOf="@id/gameScoreAwayIncreaseTwo"
...
            app:layout_constraintStart_toStartOf="@id/numberOfBasketsThreeAway"
            app:layout_constraintTop_toBottomOf="@id/numberOfBasketsThreeAway"
            tools:text="00"/>

        <!-- Exit button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/gameScoreExitButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/scoreGameExit"
            android:textColor="@android:color/white"
            android:onClick="@{_ -> viewModel.onExitPressed()}"
...
