...
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeTitle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/homeNewGameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/homeNewGame"
            android:textColor="@android:color/white"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="30dp"
            android:onClick="@{_ -> viewModel.onNewGamePressed()}"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/homeRecordsButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cornerRadius="100dp"
            />

        <com.google.android.material.button.MaterialButton
...
